fix some bug